spacing fixes for post preview date

--- a/src/cf-typography/src/molecules/meta-header.less
+++ b/src/cf-typography/src/molecules/meta-header.less
@@ -1,8 +1,18 @@
 .m-meta-header {
-    padding-bottom: unit( 8px / @base-font-size-px, em );
+    padding-bottom: unit( 10px / @base-font-size-px, em );
     border-bottom: 1px solid @meta-header_border;
     // TODO: Move margin to o-post-preview and other parent containers
-    margin-bottom: unit( 10px / @base-font-size-px, em );
+    margin-bottom: unit( 15px / @base-font-size-px, em );
+    overflow: auto;
+
+    .respond-to-max(@bp-xs-max, {
+
+        &_right {
+            display: block;
+            margin-bottom: unit( 5px / 14px, em );
+        }
+
+    });
 
     .respond-to-min( @bp-sm-min, {
         .u-clearfix();
@@ -14,9 +24,15 @@
         &_right {
             float: right;
         }
+
+        .a-heading {
+            display: block;
+        }
+
     } );
 
     .a-heading {
+        display: inline;
         margin-bottom: 0;
     }
 }
